force-app/main/default/objects/Account/fields/Allowance_Driver_Count__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Driver_Count__c</fullName>
    <inlineHelpText>How many employees receive a car allowance?</inlineHelpText>
    <label>Allowance Driver Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>