force-app/main/default/objects/Account/fields/Bodily_Injury__c.field-meta.xml
<CustomField>
    <fullName>Bodily_Injury__c</fullName>
    <label>Bodily Injury</label>
    <length>20</length>
    <type>Text</type>
</CustomField>