force-app/main/default/objects/Account/fields/Car_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Allowance_Amount__c</fullName>
    <inlineHelpText>How much is the monthly car allowance?</inlineHelpText>
    <label>Car Allowance Amount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>