force-app/main/default/objects/Account/fields/Collision__c.field-meta.xml
<CustomField>
    <fullName>Collision__c</fullName>
    <label>Collision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>