force-app/main/default/objects/Account/fields/Enable_Email_For_Driver__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_For_Driver__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Email For Driver</label>
    <type>Checkbox</type>
</CustomField>