force-app/main/default/objects/Account/fields/isUsingTriplog__c.field-meta.xml
<CustomField>
    <fullName>isUsingTriplog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUsingTriplog</label>
    <type>Checkbox</type>
</CustomField>