force-app/main/default/objects/Account/fields/Lock_date__c.field-meta.xml
<CustomField>
    <fullName>Lock_date__c</fullName>
    <label>Lock date</label>
    <type>Date</type>
</CustomField>