force-app/main/default/objects/Account/fields/Logo_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Document_Id__c</fullName>
    <label>Logo Picture Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>