force-app/main/default/objects/Account/fields/Show_Hide_Historical_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Show_Hide_Historical_Allowance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show/Hide Historical Allowance</label>
    <type>Checkbox</type>
</CustomField>