force-app/main/default/objects/Account/fields/Tax_Calculation_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculation_Year__c</fullName>
    <label>Tax Calculation Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>