force-app/main/default/objects/Account/fields/Triplog_API__c.field-meta.xml
<CustomField>
    <fullName>Triplog_API__c</fullName>
    <label>Triplog API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>