force-app/main/default/objects/Account/fields/Uninsured_Motorist__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_Motorist__c</fullName>
    <label>Uninsured Motorist</label>
    <length>20</length>
    <type>Text</type>
</CustomField>