force-app/main/default/objects/Account/fields/Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Types__c</fullName>
    <label>Vehicle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2021 test vehicle</fullName>
            </value>
            <value>
                <fullName>2021 new test</fullName>
            </value>
            <value>
                <fullName>2021 Test Ford</fullName>
            </value>
            <value>
                <fullName>2019 Ford Fusion</fullName>
            </value>
            <value>
                <fullName>2019 Honda Civic</fullName>
            </value>
            <value>
                <fullName>2019 Chevrolet Malibu</fullName>
            </value>
            <value>
                <fullName>2019 Toyota Camry</fullName>
            </value>
            <value>
                <fullName>2019 Dodge Journey</fullName>
            </value>
            <value>
                <fullName>2019 Ford Escape</fullName>
            </value>
            <value>
                <fullName>2019 Full Size Sedan 2</fullName>
            </value>
            <value>
                <fullName>2019 Mid Size Sedan 4</fullName>
            </value>
            <value>
                <fullName>2019 SUV 1</fullName>
            </value>
            <value>
                <fullName>2019 Full Size Sedan 3</fullName>
            </value>
            <value>
                <fullName>2019 Ford Taurus</fullName>
            </value>
            <value>
                <fullName>2019 Ford Explorer</fullName>
            </value>
            <value>
                <fullName>2019 Ford F-150</fullName>
            </value>
            <value>
                <fullName>2019 Dodge Durango</fullName>
            </value>
            <value>
                <fullName>2019 Ford F-250</fullName>
            </value>
            <value>
                <fullName>2019 Full Size Sedan</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Charger</fullName>
            </value>
            <value>
                <fullName>2020 Ford F-150</fullName>
            </value>
            <value>
                <fullName>2020 Ford Escape</fullName>
            </value>
            <value>
                <fullName>2020 AWD Ford Escape</fullName>
            </value>
            <value>
                <fullName>2020 Ford F-250</fullName>
            </value>
            <value>
                <fullName>2020 Chevrolet Malibu</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Journey</fullName>
            </value>
            <value>
                <fullName>2020 Dodge Durango</fullName>
            </value>
            <value>
                <fullName>2020 Ford Fusion</fullName>
            </value>
            <value>
                <fullName>2020 Full Size Sedan 2</fullName>
            </value>
            <value>
                <fullName>2020 Ford Taurus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>