force-app/main/default/objects/Account/fields/Visitor_Track__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If account came from or was validated by visitor track</inlineHelpText>
    <label>Visitor Track</label>
    <type>Checkbox</type>
</CustomField>