force-app/main/default/objects/Account/fields/VisitorTrackCompanyId__c.field-meta.xml
<CustomField>
    <fullName>VisitorTrackCompanyId__c</fullName>
    <description>Last VisitorTrack Activity Date</description>
    <inlineHelpText>Last VisitorTrack Activity Date</inlineHelpText>
    <label>VisitorTrack Company Id</label>
    <type>Date</type>
</CustomField>